fixed timer colon : alignment

--- a/components/chatComps/styles/timerpopup.module.css
+++ b/components/chatComps/styles/timerpopup.module.css
@@ -52,6 +52,7 @@
 }
 .colon{
     font-size: 2rem;
+    transform: translateY(-30%);
 }
 @media (width > 800px){
     .main img{
